200 OK https://www.nass.gov.ng/mp/profile/746

--- a/www.nass.gov.ng/8c59c2071b894949306af3a5db7e2a66a6b80cc4.yml
+++ b/www.nass.gov.ng/8c59c2071b894949306af3a5db7e2a66a6b80cc4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 08:18:44 GMT
+    - Mon, 20 Aug 2018 22:43:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GFXH2X8%2CALM%2CtBB5v%2CyMT2; path=/
+    - PHPSESSID=7YIDhD%2CWN%2CuzFZyEgCJWX1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 08:18:44 GMT
+recorded_at: Mon, 20 Aug 2018 22:43:11 GMT
