--- a/www.nass.gov.ng/44f93b030f76e3c16f6c93713690a13d24af2914.yml
+++ b/www.nass.gov.ng/44f93b030f76e3c16f6c93713690a13d24af2914.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 08:21:55 GMT
+    - Mon, 20 Aug 2018 22:45:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yUmDWBAWOqCVuXPdkjB8r1; path=/
+    - PHPSESSID=Oy4K5xEEAw2C-n5%2Ciwqm63; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 08:21:55 GMT
+recorded_at: Mon, 20 Aug 2018 22:45:49 GMT
