--- a/www.nass.gov.ng/077094b06b82dcea8baa10a4287539f526508443.yml
+++ b/www.nass.gov.ng/077094b06b82dcea8baa10a4287539f526508443.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 08:26:47 GMT
+    - Mon, 20 Aug 2018 22:49:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=v0w8R0PoiuhZH5%2ClCg3A%2C2; path=/
+    - PHPSESSID=NqABxHGovZ6pGfo6wrYOC1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 08:26:47 GMT
+recorded_at: Mon, 20 Aug 2018 22:49:18 GMT
