--- a/www.nass.gov.ng/435c0e360c287ddbb7d6570d622a6ee787501069.yml
+++ b/www.nass.gov.ng/435c0e360c287ddbb7d6570d622a6ee787501069.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 08:56:28 GMT
+    - Mon, 20 Aug 2018 23:24:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cjyAybQVEWAGH%2CtFtyMft3; path=/
+    - PHPSESSID=7NKEacaUAN7wMng4yc7zB3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 08:56:28 GMT
+recorded_at: Mon, 20 Aug 2018 23:24:02 GMT
