--- a/www.nass.gov.ng/538c6e6f17fc4b8af182bbbb1b41bb7a7a52b456.yml
+++ b/www.nass.gov.ng/538c6e6f17fc4b8af182bbbb1b41bb7a7a52b456.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 09:01:28 GMT
+    - Mon, 20 Aug 2018 23:31:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nVqshg4jnw-caUhyUMR0D3; path=/
+    - PHPSESSID=-gBo3v%2CyeYRsbU4n%2C55R12; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 09:01:28 GMT
+recorded_at: Mon, 20 Aug 2018 23:31:38 GMT
