--- a/www.nass.gov.ng/62d5139bbef8c034d48ec5dd8c9d9f3548bab7e3.yml
+++ b/www.nass.gov.ng/62d5139bbef8c034d48ec5dd8c9d9f3548bab7e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 09:11:37 GMT
+    - Mon, 20 Aug 2018 23:43:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LqFgKJP%2C73xYY5aYsJusr2; path=/
+    - PHPSESSID=Q4C5a%2CYAGTWApplO53Xxu2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 09:11:37 GMT
+recorded_at: Mon, 20 Aug 2018 23:43:08 GMT
