--- a/www.nass.gov.ng/4212c5b79c6a32f139e80e1cdb7849b237cde473.yml
+++ b/www.nass.gov.ng/4212c5b79c6a32f139e80e1cdb7849b237cde473.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 09:26:50 GMT
+    - Tue, 21 Aug 2018 00:00:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UokAo1NWcp6efxAnfhMMg0; path=/
+    - PHPSESSID=WBAVB8NKG3p%2CIwtRVf5Cb3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 09:26:50 GMT
+recorded_at: Tue, 21 Aug 2018 00:00:08 GMT
