--- a/www.nass.gov.ng/c3ac48777b325bd12a83ee492d9e0bd00d85cb95.yml
+++ b/www.nass.gov.ng/c3ac48777b325bd12a83ee492d9e0bd00d85cb95.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 09:36:10 GMT
+    - Tue, 21 Aug 2018 00:08:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2hcNjEv42e%2CzTg-EQQZ8%2C3; path=/
+    - PHPSESSID=tEs59-lrDaLnowGCtmQNF0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 09:36:11 GMT
+recorded_at: Tue, 21 Aug 2018 00:08:58 GMT
