--- a/www.nass.gov.ng/58315a448e7656d285c58b27aefd893ef974ea93.yml
+++ b/www.nass.gov.ng/58315a448e7656d285c58b27aefd893ef974ea93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 09:41:00 GMT
+    - Tue, 21 Aug 2018 00:15:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fs%2COb%2ClEzjkoe4ZohifhZ2; path=/
+    - PHPSESSID=ePEG7kAJmelW6W0kxhBb73; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 09:41:00 GMT
+recorded_at: Tue, 21 Aug 2018 00:15:46 GMT
