--- a/www.nass.gov.ng/e60b8da6b2c1c3f95eae4ead85f0f31539a1fca6.yml
+++ b/www.nass.gov.ng/e60b8da6b2c1c3f95eae4ead85f0f31539a1fca6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 09:46:31 GMT
+    - Tue, 21 Aug 2018 00:20:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JxRNkABvlGxW0DLCia2a83; path=/
+    - PHPSESSID=%2CrOOKuY5z4-P4x3Q%2ChZ1L2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 09:46:32 GMT
+recorded_at: Tue, 21 Aug 2018 00:20:04 GMT
