--- a/www.nass.gov.ng/dc568af853395290a756895dae7e3abf49d0f127.yml
+++ b/www.nass.gov.ng/dc568af853395290a756895dae7e3abf49d0f127.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 09:58:35 GMT
+    - Tue, 21 Aug 2018 00:35:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jw%2C2DOmhg%2CdydKZAbQWSu0; path=/
+    - PHPSESSID=iLBjyZpjA4gsu-Z7QDAQo1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 09:58:35 GMT
+recorded_at: Tue, 21 Aug 2018 00:35:49 GMT
