--- a/www.nass.gov.ng/883bb8348c43cdc1799da9a76d72721bd7301292.yml
+++ b/www.nass.gov.ng/883bb8348c43cdc1799da9a76d72721bd7301292.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 10:05:58 GMT
+    - Tue, 21 Aug 2018 00:45:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zo%2CVAL9tQ3otwhe467es70; path=/
+    - PHPSESSID=BxSKAFAS3RiKVgocQPb043; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 10:05:58 GMT
+recorded_at: Tue, 21 Aug 2018 00:45:08 GMT
