--- a/www.nass.gov.ng/b23d32c1d9e36ce93bf213777077c60913aef7fa.yml
+++ b/www.nass.gov.ng/b23d32c1d9e36ce93bf213777077c60913aef7fa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 11:06:40 GMT
+    - Tue, 21 Aug 2018 01:51:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=p4U5ZLoeZ2Y34%2CaHAdHrk1; path=/
+    - PHPSESSID=-m3w%2CoOY-qO3ErWyA9FAW0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 11:06:40 GMT
+recorded_at: Tue, 21 Aug 2018 01:51:13 GMT
