--- a/www.nass.gov.ng/988f64848bc7d860abba94d4841b1ea6559b4a62.yml
+++ b/www.nass.gov.ng/988f64848bc7d860abba94d4841b1ea6559b4a62.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 11:16:41 GMT
+    - Tue, 21 Aug 2018 02:02:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cAq%2CSdtfs4BcKXm%2C1GYVX2; path=/
+    - PHPSESSID=poVxgMTUqzUdNxRPPPZNl3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 11:16:41 GMT
+recorded_at: Tue, 21 Aug 2018 02:02:23 GMT
