--- a/www.nass.gov.ng/ac5a00fa8283afe2dff153aec5a8c892d4f5c797.yml
+++ b/www.nass.gov.ng/ac5a00fa8283afe2dff153aec5a8c892d4f5c797.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 11:25:44 GMT
+    - Tue, 21 Aug 2018 02:11:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mInYZWnwKQindoZCkZlmt0; path=/
+    - PHPSESSID=SSB-njcwAWOr0C%2CaMd2S10; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 11:25:44 GMT
+recorded_at: Tue, 21 Aug 2018 02:11:57 GMT
