--- a/www.nass.gov.ng/63fd35ee9280b86f53c690824747c532536a7060.yml
+++ b/www.nass.gov.ng/63fd35ee9280b86f53c690824747c532536a7060.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 11:30:31 GMT
+    - Tue, 21 Aug 2018 02:17:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JftDWXUKaAx%2CbJHfL0Oin3; path=/
+    - PHPSESSID=kLwhss7C7AYrXXx1sr2Yg3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 11:30:31 GMT
+recorded_at: Tue, 21 Aug 2018 02:17:44 GMT
