--- a/www.nass.gov.ng/7b1bfaee0b81335195f8076b9013e843356391cf.yml
+++ b/www.nass.gov.ng/7b1bfaee0b81335195f8076b9013e843356391cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 11:34:13 GMT
+    - Tue, 21 Aug 2018 02:20:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Cb9MwEGm0tgi-zGfk79sY0; path=/
+    - PHPSESSID=aueN7pflT5jPDb1bMOtUA2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 11:34:13 GMT
+recorded_at: Tue, 21 Aug 2018 02:20:25 GMT
