200 OK https://www.nass.gov.ng/mp/profile/768

--- a/www.nass.gov.ng/3498dc6b736bdd60aebf760b0f2eb6a02b5286a2.yml
+++ b/www.nass.gov.ng/3498dc6b736bdd60aebf760b0f2eb6a02b5286a2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 12:32:11 GMT
+    - Tue, 21 Aug 2018 03:18:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tcoP-V27LnOCw%2Cl14tx650; path=/
+    - PHPSESSID=BnM-2Z336nzlehlFNqLZ11; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 12:32:11 GMT
+recorded_at: Tue, 21 Aug 2018 03:18:56 GMT
