200 OK https://www.nass.gov.ng/mp/profile/750

--- a/www.nass.gov.ng/a0cef5df2c6ec661f024e5433691100eef04c968.yml
+++ b/www.nass.gov.ng/a0cef5df2c6ec661f024e5433691100eef04c968.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 13:28:51 GMT
+    - Tue, 21 Aug 2018 04:08:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FdzOQTrIEy7yb8V9rpDIt0; path=/
+    - PHPSESSID=-U%2CUlMOo1uu-eS0GsDXBj2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 13:28:51 GMT
+recorded_at: Tue, 21 Aug 2018 04:08:21 GMT
