200 OK https://www.nass.gov.ng/mp/profile/561

--- a/www.nass.gov.ng/1a4e433938390904e7e570b1346ac812e5f7dbfa.yml
+++ b/www.nass.gov.ng/1a4e433938390904e7e570b1346ac812e5f7dbfa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 14:30:35 GMT
+    - Tue, 21 Aug 2018 05:12:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lU5B58J3Uq2Pd-A0q%2CYU42; path=/
+    - PHPSESSID=WqZAaKgTmz3n8E5piqQrR3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 14:30:35 GMT
+recorded_at: Tue, 21 Aug 2018 05:12:38 GMT
