200 OK https://www.nass.gov.ng/mp/profile/808

--- a/www.nass.gov.ng/62eddccdd8f33fe827d878d8ca4a1b94715c2799.yml
+++ b/www.nass.gov.ng/62eddccdd8f33fe827d878d8ca4a1b94715c2799.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 21:35:27 GMT
+    - Tue, 21 Aug 2018 17:02:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kL3KxV3HC6PjVpXklLFK43; path=/
+    - PHPSESSID=It5St2C3VZeY%2CLRO4fuJ63; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 21:35:27 GMT
+recorded_at: Tue, 21 Aug 2018 17:02:40 GMT
