200 OK https://www.nass.gov.ng/mp/profile/623

--- a/www.nass.gov.ng/efaf8b3b5225139dc28266021cab8894ef651080.yml
+++ b/www.nass.gov.ng/efaf8b3b5225139dc28266021cab8894ef651080.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 22:10:53 GMT
+    - Tue, 21 Aug 2018 17:36:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Esy5xQwEsedaS%2CCQj1oSf0; path=/
+    - PHPSESSID=WsxhhL336C-1ohxF7X0sM3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 22:10:53 GMT
+recorded_at: Tue, 21 Aug 2018 17:36:14 GMT
