200 OK https://www.nass.gov.ng/mp/profile/931

--- a/www.nass.gov.ng/fc01a801df066999ed3cae6abfffb3e4561c9244.yml
+++ b/www.nass.gov.ng/fc01a801df066999ed3cae6abfffb3e4561c9244.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 23:26:40 GMT
+    - Tue, 21 Aug 2018 18:47:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3hJxIm%2C4eW7T7wE0LFoA60; path=/
+    - PHPSESSID=EoDk-6ZuA0cvgp%2Cg6-Qez0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 23:26:40 GMT
+recorded_at: Tue, 21 Aug 2018 18:47:33 GMT
