200 OK https://www.nass.gov.ng/mp/profile/17

--- a/www.nass.gov.ng/f1f86ef32dc11c1cb4741b02516642a256eed7ff.yml
+++ b/www.nass.gov.ng/f1f86ef32dc11c1cb4741b02516642a256eed7ff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 00:02:43 GMT
+    - Tue, 21 Aug 2018 19:19:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GUA5s%2Cg5OBjcrSxeieU4c3; path=/
+    - PHPSESSID=XYj9NcBdZs4ZmWxyZucZL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 00:02:43 GMT
+recorded_at: Tue, 21 Aug 2018 19:19:38 GMT
