200 OK https://www.nass.gov.ng/mp/profile/796

--- a/www.nass.gov.ng/e85a3f4671b4c179fee11f6cc9f96504abd80dd4.yml
+++ b/www.nass.gov.ng/e85a3f4671b4c179fee11f6cc9f96504abd80dd4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:49:56 GMT
+    - Thu, 23 Aug 2018 18:06:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Bku0kmi%2Cu5BR8YKMIBCy92; path=/
+    - PHPSESSID=3GNTPN0w%2CLJntOiaykJCS0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:49:56 GMT
+recorded_at: Thu, 23 Aug 2018 18:06:29 GMT
