200 OK https://www.nass.gov.ng/mp/profile/970

--- a/www.nass.gov.ng/8658c9f17bd0e7286d0a42a220a5491de025c1dc.yml
+++ b/www.nass.gov.ng/8658c9f17bd0e7286d0a42a220a5491de025c1dc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:53:08 GMT
+    - Thu, 23 Aug 2018 18:10:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GSD89wu-jWNBy3ZxL%2CNQ-1; path=/
+    - PHPSESSID=KcYiHTEXzp3GlT5TH-wFF1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:53:08 GMT
+recorded_at: Thu, 23 Aug 2018 18:10:48 GMT
